# zyndai

./: README.md
backend/: .gitignore  SETUP.md  main.py  pyproject.toml  schema.sql
backend/database/: __init__.py  connection.py
backend/models/: __init__.py  active_tender.py  base.py  chat.py  proposal.py  user.py
backend/prompts/: README.md  __init__.py  phed_rajasthan.py  submit_draft.py
backend/services/: __init__.py  active_tender_service.py  email_service.py  file_processor.py  gemini_service.py  proposal_revision_service.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  LoginPage.css  LoginPage.tsx
frontend/src/components/: SearchInput.tsx  Sidebar.tsx
frontend/src/proposals/: ActiveTenderPage.css  ActiveTenderPage.tsx  HomePage.css  HomePage.tsx
frontend/src/team/: TeamPage.css  TeamPage.tsx
